--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,18 @@ on:
   push:
     branches: [ "main" ]
 
+
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted
-
-
+  test:
+    runs-on: prod
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: 'npm'
 
       - name: Install Dependencies
         run: npm ci
@@ -21,12 +23,44 @@ jobs:
       - name: Run Tests
         run: npm run test -- --run
 
+  build:
+    needs: test
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Build Project
         run: npm run build
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-folder
+          path: dist/
+
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-folder
+          path: dist
 
       - name: Deploy to Apache
         run: |
           sudo mkdir -p /var/www/portfolio
           sudo rm -rf /var/www/portfolio/*
+          # Pas besoin de "dist/*" ici car l'artifact a téléchargé le contenu DANS le dossier dist courant
           sudo cp -r dist/* /var/www/portfolio/
           sudo systemctl reload apache2
